Part1/Project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /logoutput
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345       
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2346
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 2347
      - path: /gettodos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2348
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2348
